--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             себя весь спектр ваших транспортныз задач
           </p>
           <button
-            class="w-[18rem] mb-7 max-[768px]:mb-6 h-16 max-[768px]:w-full max-[768px]:text-base! max-[1440px]:h-13 max-[1440px]:w-59.5 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+            class="w-[18rem] mb-7 max-[768px]:mb-6 h-16 max-[768px]:w-full max-[1440px]:text-base! max-[768px]:text-base! max-[1440px]:h-13 max-[1440px]:w-59.5 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
           >
             Подробнее о компании
             <img
@@ -603,7 +603,7 @@
             class="input_form w-full! pt-6 h-33.5! mb-12 max-[768px]:mb-6"
           ></textarea>
           <button
-            class="w-60 h-19 max-[1440px]:h-13 max-[768px]:w-full max-[768px]:text-base! max-[1440px]:w-46.5 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+            class="w-60 h-19 max-[1440px]:h-13 max-[768px]:w-full max-[1440px]:text-base! max-[1440px]:w-46.5 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
           >
             Оставить заявку
             <img
@@ -620,7 +620,7 @@
         <div class="flex items-center justify-between mb-14 max-[768px]:mb-6">
           <h2 class="title">Отзывы</h2>
           <button
-            class="w-44.5 max-[768px]:hidden h-16 max-[1440px]:h-13 max-[1440px]:w-37 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+            class="w-44.5 max-[768px]:hidden h-16 max-[1440px]:h-13 max-[1440px]:w-37 max-[1440px]:text-base! rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
           >
             Все отзывы
             <img
@@ -1040,7 +1040,7 @@
             class="input_form w-full! pt-6 h-33.5! mb-12 max-[768px]:mb-6"
           ></textarea>
           <button
-            class="w-60 h-19 max-[1440px]:h-13 max-[768px]:w-full max-[768px]:text-base! max-[1440px]:w-46.5 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+            class="w-60 h-19 max-[1440px]:h-13 max-[768px]:w-full max-[1440px]:text-base! max-[768px]:text-base! max-[1440px]:w-46.5 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
           >
             Оставить заявку
             <img
