--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header
-      class="max-w-[1920px] max-[1440px]:max-w-5xl max-[1024px]:max-w-3xl max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 max-[768px]:max-w-[360px] mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
+      class="max-w-[1920px] top-0 relative max-[1440px]:max-w-5xl z-index: 1000 max-[1024px]:max-w-3xl max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 max-[768px]:max-w-[360px] mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
         <img
@@ -43,13 +43,81 @@
           Заказать звонок
         </button>
         <div
-          class="header_icon_wrap gap-2.5 w-30! max-[768px]:h-10! max-[768px]:23!"
+          class="header_icon_wrap gap-2.5 w-30! max-[768px]:h-10! max-[768px]:23! burger-menu"
+          id="burgerBtn"
         >
           <img src="./assets/icons/menu.svg" alt="menu" />
           <p class="text-white font-medium">Меню</p>
         </div>
       </div>
+      <div class="menu" id="menu">
+        <div
+          class="flex gap-6 items-center justify-between px-10 pb-6 max-[768px]:px-4 max-[768px]:pb-2 rounded-b-[25px] mb-36 border-b border-b-[#FFFFFF33]"
+        >
+          <img
+            src="./assets/icons/logo.svg"
+            alt="logo"
+            class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
+          />
+          <div class="gap-2 flex">
+            <div class="header_icon_wrap max-[768px]:hidden!">
+              <img src="./assets/icons/phone.svg" alt="phone" />
+            </div>
+            <button
+              class="bg-[#C83A36] h-12 w-41.5 rounded-xl text-white font-medium max-[768px]:hidden!"
+            >
+              Заказать звонок
+            </button>
+            <div
+              class="header_icon_wrap gap-2.5 w-30! max-[768px]:h-10! max-[768px]:23! burger-menu"
+              id="closeMenuBtn"
+            >
+              <img src="./assets/icons/menu.svg" alt="menu" />
+              <p class="text-white font-medium">Меню</p>
+            </div>
+          </div>
+        </div>
+        <div class="px-5">
+          <div class="flex items-center gap-1 justify-between mb-8">
+            <p
+              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+            >
+              Грузоперевозки
+            </p>
+            <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
+          </div>
+          <div class="flex items-center gap-1 justify-between mb-8">
+            <p
+              class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
+            >
+              Автоперевозки
+            </p>
+            <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
+          </div>
+          <p
+            class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
+          >
+            Расчет стоимости
+          </p>
+          <p
+            class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
+          >
+            Прайс-лист
+          </p>
+          <div class="hidden max-[768px]:flex gap-3">
+            <button
+              class="bg-[#C83A36] h-10 w-40 rounded-xl text-white font-medium text-sm!"
+            >
+              Заказать звонок
+            </button>
+            <div class="header_icon_wrap w-10! h-10!">
+              <img src="./assets/icons/phone.svg" alt="phone" />
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
+
     <div
       class="relative -mt-8 max-[1440px]:-mt-23 -z-10 max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
     >
@@ -224,7 +292,7 @@
               еврофурами
             </p>
             <p
-              class="text-lg text-[#3A3A3A] font-medium block max-[768px]:block"
+              class="text-lg text-[#3A3A3A] font-medium hidden max-[768px]:block"
             >
               Перевозка еврофурами
             </p>
@@ -1302,4 +1370,5 @@
       </div>
     </footer>
   </body>
+  <script src="main.js"></script>
 </html>
