--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           Заказать звонок
         </button>
         <div
-          class="header_icon_wrap gap-2.5 w-30! max-[768px]:h-10! max-[768px]:23! burger-menu"
+          class="header_icon_wrap gap-2.5 w-30! hidden! max-[1440px]:flex! max-[768px]:h-10! max-[768px]:23! burger-menu"
           id="burgerBtn"
         >
           <img src="./assets/icons/menu.svg" alt="menu" />
@@ -72,7 +72,7 @@
               class="header_icon_wrap gap-2.5 w-30! max-[768px]:h-10! max-[768px]:23! burger-menu"
               id="closeMenuBtn"
             >
-              <img src="./assets/icons/menu.svg" alt="menu" />
+              <img src="./assets/icons/close.svg" alt="menu" />
               <p class="text-white font-medium">Меню</p>
             </div>
           </div>
@@ -132,7 +132,7 @@
         class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5"
       />
       <div
-        class="flex justify-between absolute w-full top-0 z-10 px-15 pt-15 max-[1440px]:pt-22.5 max-[768px]:px-5 max-[768px]:pt-30"
+        class="flex justify-between absolute w-full top-0 z-10 px-15 pt-22.5 max-[1440px]:pt-32.5 max-[768px]:px-5 max-[768px]:pt-30"
       >
         <div>
           <h1
