--- a/news.html
+++ b/news.html
@@ -10,27 +10,32 @@
   </head>
   <body>
     <header
-      class="max-w-[1920px] top-0 relative max-[1440px]:max-w-5xl max-[1024px]:max-w-3xl max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 max-[768px]:max-w-[360px] mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
+      class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
-        <img
-          src="./assets/icons/logo.svg"
-          alt="logo"
-          class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
-        />
+        <a href="/">
+          <img
+            src="./assets/icons/logo.svg"
+            alt="logo"
+            class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
+          />
+        </a>
         <div class="flex gap-6 max-[1440px]:hidden">
           <div class="flex items-center gap-1">
-            <p class="text-white font-medium text-xl leading-[100%]">
+            <a
+              href="./cargo_transportation.html"
+              class="text-white font-medium text-xl leading-[100%]"
+            >
               Грузоперевозки
-            </p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
+            </a>
+            <img src="./assets/icons/chevron.svg" alt="chevron" />
           </div>
           <div class="flex items-center gap-1">
             <p class="header_title">Автоперевозки</p>
-            <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
+            <img src="./assets/icons/chevron.svg" alt="chevron" />
           </div>
           <p class="header_title">Расчет стоимости</p>
-          <p class="header_title">Прайс-лист</p>
+          <a href="./pricelist.html" class="header_title">Прайс-лист</a>
         </div>
       </div>
       <div class="gap-2 flex">
@@ -79,11 +84,12 @@
         </div>
         <div class="px-5">
           <div class="flex items-center gap-1 justify-between mb-8">
-            <p
+            <a
+              href="./cargo_transportation.html"
               class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
             >
               Грузоперевозки
-            </p>
+            </a>
             <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
           </div>
           <div class="flex items-center gap-1 justify-between mb-8">
@@ -99,11 +105,12 @@
           >
             Расчет стоимости
           </p>
-          <p
+          <a
+            href="./pricelist.html"
             class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
           >
             Прайс-лист
-          </p>
+          </a>
           <div class="hidden max-[768px]:flex gap-3">
             <button
               class="bg-[#C83A36] h-10 w-40 rounded-xl text-white font-medium text-sm!"
@@ -118,7 +125,7 @@
       </div>
     </header>
     <div
-      class="bg-[#3A3A3A] overflow-hidden max-[1440px]:rounded-b-3xl max-[768px]:mb-20 relative max-[768px]:px-4 max-[768px]:pb-9 max-[768px]:pt-14.5 max-[1440px]:mb-25 max-[1024px]:px-5 p-15 pt-22.5 max-[1440px]:pb-8 -mt-7.5 max-[1440px]:pt-13.5 rounded-b-[56px] mb-40 max-w-[1920px] max-[1440px]:max-w-5xl max-[1024px]:max-w-3xl max-[768px]:max-w-[360px] mx-auto"
+      class="bg-[#3A3A3A] overflow-hidden max-[1440px]:rounded-b-3xl max-[768px]:mb-20 relative max-[768px]:px-4 max-[768px]:pb-9 max-[768px]:pt-14.5 max-[1440px]:mb-25 max-[1024px]:px-5 p-15 pt-22.5 max-[1440px]:pb-8 -mt-7.5 max-[1440px]:pt-13.5 rounded-b-[56px] mb-40 mx-auto"
     >
       <h1
         class="text-white text-[4rem] leading-[100%] mb-8 max-w-200 max-[1440px]:text-5xl max-[1024px]:max-w-140 max-[768px]:max-w-full max-[768px]:text-[2rem]"
@@ -296,7 +303,7 @@
       </div>
     </main>
     <footer
-      class="bg-[#3A3A3A] footer_section_mobile max-[768px]:max-w-[360px] max-[768px]:pb-24 p-15 max-[768px]:px-4 max-[768px]:pt-10 pb-8 max-[1024px]:pb-36 rounded-t-[56px] max-[1024px]:max-w-3xl max-[1024px]:px-5 relative max-[1440px]:rounded-t-3xl z-20 max-[1440px]:px-10 max-[1440px]:-mt-5 max-w-[1920px] max-[1440px]:max-w-5xl mx-auto footer_section"
+      class="bg-[#3A3A3A] footer_section_mobile max-[768px]:pb-24 p-15 max-[768px]:px-4 max-[768px]:pt-10 pb-8 max-[1024px]:pb-36 rounded-t-[56px] max-[1024px]:px-5 relative max-[1440px]:rounded-t-3xl z-20 max-[1440px]:px-10 max-[1440px]:-mt-5 mx-auto footer_section"
     >
       <div
         class="flex items-center justify-between mb-19.5 z-2000 max-[768px]:mb-8 relative max-[768px]:flex-col max-[768px]:gap-8 max-[768px]:items-start"
