--- a/cargo_transportation.html
+++ b/cargo_transportation.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
     <link href="./output.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
     <link href="./priceList.css" rel="stylesheet" />
-    <title>News</title>
+    <title>Cargo transportation</title>
   </head>
   <body>
     <header
@@ -122,28 +126,113 @@
       </div>
     </header>
     <div
-      class="bg-[#3A3A3A] overflow-hidden max-[1440px]:rounded-b-3xl max-[768px]:mb-20 relative max-[768px]:px-4 max-[768px]:pb-9 max-[768px]:pt-14.5 max-[1440px]:mb-25 max-[1024px]:px-5 p-15 pt-22.5 max-[1440px]:pb-8 -mt-7.5 max-[1440px]:pt-13.5 rounded-b-[56px] mb-40 mx-auto"
+      class="swiper mySwiper relative -mt-8 max-[1440px]:-mt-23 overflow-hidden -z-10 mx-auto mb-30 max-[1440px]:mb-20 max-[768px]:mb-16"
     >
-      <h1
-        class="text-white text-[4rem] leading-[100%] mb-8 max-w-220 max-[1440px]:max-w-170 max-[1440px]:text-5xl max-[1024px]:max-w-140 max-[768px]:max-w-full max-[768px]:text-[2rem]"
+      <div class="swiper-wrapper max-h-[950px] max-[1440px]:max-h-[850px]">
+        <div class="swiper-slide">
+          <img
+            src="./assets/images/main.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+          />
+          <img
+            src="./assets/images/mainTablet.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./assets/images/main.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+          />
+          <img
+            src="./assets/images/mainTablet.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./assets/images/main.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+          />
+          <img
+            src="./assets/images/mainTablet.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./assets/images/main.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+          />
+          <img
+            src="./assets/images/mainTablet.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./assets/images/main.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+          />
+          <img
+            src="./assets/images/mainTablet.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./assets/images/main.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+          />
+          <img
+            src="./assets/images/mainTablet.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+          />
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+
+      <div
+        class="flex justify-between absolute w-full top-0 z-10 px-15 pt-22.5 max-[1440px]:pt-32.5 max-[768px]:px-5 max-[768px]:pt-30"
       >
-        Грузоперевозки фурами 10т по всей России
-      </h1>
-      <button
-        class="w-76.5 h-19 max-[1440px]:h-13 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
-      >
-        Начать сотрудничество
-        <img
-          src="./assets/icons/chevron.svg"
-          alt="chevron"
-          class="-rotate-90"
-        />
-      </button>
-      <img
-        src="./assets/images/cargo.png"
-        alt="news"
-        class="absolute right-0 -top-16 max-[1440px]:-top-46 max-[1440px]:-right-48 max-[1024px]:-top-34 max-[1024px]:-right-55 max-[768px]:w-50 max-[768px]:h-35 max-[768px]:-right-17 max-[768px]:top-33"
-      />
+        <div
+          class="max-w-[793px] max-[1440px]:max-w-[431px] max-[1024px]:max-w-[550px] max-[768px]:max-w-full"
+        >
+          <h1
+            class="text-white font-medium text-[4rem] max-[1440px]:text-5xl leading-[100%] mb-4 max-[768px]:text-2xl"
+          >
+            Грузоперевозки фурами в Новосибирске
+          </h1>
+          <p class="text-white font-medium text-2xl max-[1440px]:text-sm mb-8">
+            Перевозки фурами востребованы в самых разных сферах. Коммерческие
+            предприятия используют их для быстрой доставки оптовых партий, а
+            промышленные — для перевозки оборудования или сырья, что сокращает
+            затраты на логистику, а также ускоряет реализацию проектов
+          </p>
+          <button
+            class="w-76.5 h-19 max-[1440px]:h-13 max-[1024px]:h-19 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
+          >
+            Начать сотрудничество
+            <img
+              src="./assets/icons/chevron.svg"
+              alt="chevron"
+              class="-rotate-90"
+            />
+          </button>
+        </div>
+      </div>
     </div>
     <main
       class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
@@ -1393,5 +1482,6 @@
       </div>
     </footer>
   </body>
-  <script src="main.js"></script>
+  <script src="main.js" type="module"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
 </html>
