--- a/pricelist.html
+++ b/pricelist.html
@@ -32,7 +32,9 @@
             <img src="./assets/icons/chevron.svg" alt="chevron" />
           </div>
           <div class="flex items-center gap-1">
-            <p class="header_title">Автоперевозки</p>
+            <a href="./road_transportation.html" class="header_title"
+              >Автоперевозки</a
+            >
             <img src="./assets/icons/chevron.svg" alt="chevron" />
           </div>
           <p class="header_title">Расчет стоимости</p>
@@ -94,11 +96,12 @@
             <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
           </div>
           <div class="flex items-center gap-1 justify-between mb-8">
-            <p
+            <a
+              href="./road_transportation.html"
               class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
             >
               Автоперевозки
-            </p>
+            </a>
             <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
           </div>
           <p
