--- a/blog.html
+++ b/blog.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
     <link href="./output.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
-    <title>News</title>
+
+    <title>Logistics</title>
   </head>
   <body>
     <header
       class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
-        <a href="/">
-          <img
-            src="./assets/icons/logo.svg"
-            alt="logo"
-            class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
-          />
-        </a>
+        <img
+          src="./assets/icons/logo.svg"
+          alt="logo"
+          class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
+        />
         <div class="flex gap-6 max-[1440px]:hidden">
           <div class="flex items-center gap-1">
             <a
               href="./cargo_transportation.html"
-              class="text-white font-medium text-xl leading-[100%]"
+              class="text-white font-medium text-xl"
             >
               Грузоперевозки
             </a>
@@ -109,7 +112,7 @@
             Расчет стоимости
           </p>
           <a
-            href="./pricelist.html"
+            href="/pricelist.html"
             class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
           >
             Прайс-лист
@@ -127,186 +130,17 @@
         </div>
       </div>
     </header>
-    <div
-      class="bg-[#3A3A3A] overflow-hidden max-[1440px]:rounded-b-3xl max-[768px]:mb-20 relative max-[768px]:px-4 max-[768px]:pb-9 max-[768px]:pt-14.5 max-[1440px]:mb-25 max-[1024px]:px-5 p-15 pt-22.5 max-[1440px]:pb-8 -mt-7.5 max-[1440px]:pt-13.5 rounded-b-[56px] mb-40 mx-auto"
-    >
-      <h1
-        class="text-white text-[4rem] leading-[100%] mb-8 max-w-200 max-[1440px]:text-5xl max-[1024px]:max-w-140 max-[768px]:max-w-full max-[768px]:text-[2rem]"
-      >
-        Узнайте последние новости нашей компании
-      </h1>
-      <button
-        class="w-76.5 h-19 max-[1440px]:h-13 max-[768px]:h-12 max-[768px]:w-55 max-[1440px]:w-60 max-[1440px]:text-base rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
-      >
-        Начать сотрудничество
-        <img
-          src="./assets/icons/chevron.svg"
-          alt="chevron"
-          class="-rotate-90"
-        />
-      </button>
-      <img
-        src="./assets/icons/newsMain.svg"
-        alt="news"
-        class="absolute right-0 -top-16 max-[1440px]:-top-46 max-[1440px]:-right-48 max-[1024px]:-top-34 max-[1024px]:-right-70 max-[768px]:w-60 max-[768px]:h-60 max-[768px]:-right-27 max-[768px]:top-10"
-      />
-    </div>
     <main
-      class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px] px-15 max-[1440px]:px-10 max-[1024px]:px-5"
+      class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px] px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
     >
-      <h2 class="title mb-8">Новости</h2>
-      <div class="flex gap-4 mb-12 overflow-auto max-[768px]:mb-10">
-        <button
-          class="py-4 shrink-0 px-6 bg-[#3A3A3A] flex items-center rounded-2xl text-white text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
-        >
-          Все
-        </button>
-        <button
-          class="py-4 shrink-0 px-6 bg-[#F2F5F7] flex items-center rounded-2xl text-[#3A3A3A] text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
-        >
-          Новости компании
-        </button>
-        <button
-          class="py-4 shrink-0 px-6 bg-[#F2F5F7] flex items-center rounded-2xl text-[#3A3A3A] text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
-        >
-          Новости по грузоперевозкам
-        </button>
-      </div>
-      <div
-        class="grid grid-cols-4 gap-x-6 gap-y-12 mb-30 max-[1440px]:grid-cols-3 max-[1024px]:grid-cols-2 max-[768px]:grid-cols-1"
-      >
-        <div
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
-        >
-          <img src="./assets/images/news1.png" class="mb-4" />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Новый маршрут: доставка в малые города
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Мы открыли новое направление для доставки в малые населённые пункты.
-            Теперь ваши грузы доберутся ещё быстрее.
-          </p>
-          <p class="#3A3A3A space3">28 июня 2025</p>
-        </div>
-        <div
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
-        >
-          <img
-            src="./assets/images/news2.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Снижение сроков городской доставки
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Благодаря оптимизации логистики мы сократили среднее время доставки
-            по городу до 3 часов.
-          </p>
-          <p class="#3A3A3A space3">19 июня 2025</p>
-        </div>
-        <div
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
-        >
-          <img
-            src="./assets/images/news3.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Новые стандарты упаковки
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Ввели усиленные правила упаковки грузов для повышения сохранности
-            при перевозке.
-          </p>
-          <p class="#3A3A3A space3">5 июня 2025</p>
-        </div>
-        <div
-          class="max-[1440px]:74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
-        >
-          <img
-            src="./assets/images/news4.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Мы теперь в Telegram
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Подписывайтесь на наш Telegram-канал, чтобы первыми узнавать об
-            акциях, изменениях и новостях компании.
-          </p>
-          <p class="#3A3A3A space3">1 июля 2025</p>
-        </div>
-        <div
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
-        >
-          <img src="./assets/images/news1.png" class="mb-4" />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Новый маршрут: доставка в малые города
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Мы открыли новое направление для доставки в малые населённые пункты.
-            Теперь ваши грузы доберутся ещё быстрее.
-          </p>
-          <p class="#3A3A3A space3">28 июня 2025</p>
-        </div>
-        <div
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
-        >
-          <img
-            src="./assets/images/news2.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Снижение сроков городской доставки
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Благодаря оптимизации логистики мы сократили среднее время доставки
-            по городу до 3 часов.
-          </p>
-          <p class="#3A3A3A space3">19 июня 2025</p>
-        </div>
-        <div
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
-        >
-          <img
-            src="./assets/images/news3.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Новые стандарты упаковки
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Ввели усиленные правила упаковки грузов для повышения сохранности
-            при перевозке.
-          </p>
-          <p class="#3A3A3A space3">5 июня 2025</p>
-        </div>
-        <div
-          class="max-[1440px]:74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
-        >
-          <img
-            src="./assets/images/news4.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Мы теперь в Telegram
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Подписывайтесь на наш Telegram-канал, чтобы первыми узнавать об
-            акциях, изменениях и новостях компании.
-          </p>
-          <p class="#3A3A3A space3">1 июля 2025</p>
+      <div class="flex gap-47">
+        <div>
+          <h3>Оглавление</h3>
         </div>
       </div>
     </main>
     <footer
-      class="bg-[#3A3A3A] footer_section_mobile max-[768px]:pb-24 p-15 max-[768px]:px-4 max-[768px]:pt-10 pb-8 max-[1024px]:pb-36 rounded-t-[56px] max-[1024px]:px-5 relative max-[1440px]:rounded-t-3xl z-20 max-[1440px]:px-10 max-[1440px]:-mt-5 mx-auto footer_section"
+      class="bg-[#3A3A3A] footer_section_mobile max-[768px]:pb-24 p-15 max-[768px]:px-4 max-[768px]:pt-10 pb-8 max-[1024px]:pb-36 rounded-t-[56px] max-[1024px]:px-5 relative max-[1440px]:rounded-t-3xl z-20 -mt-18 max-[1440px]:px-10 max-[1440px]:-mt-5 mx-auto footer_section"
     >
       <div
         class="flex items-center justify-between mb-19.5 z-2000 max-[768px]:mb-8 relative max-[768px]:flex-col max-[768px]:gap-8 max-[768px]:items-start"
@@ -452,5 +286,4 @@
       </div>
     </footer>
   </body>
-  <script src="main.js"></script>
 </html>
