--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
       class="swiper mySwiper relative -mt-8 max-[1440px]:-mt-23 overflow-hidden -z-10 mx-auto"
     >
       <div class="swiper-wrapper">
-        <div class="swiper-slide max-h-[950px] max-[1440px]:max-h-[850px]">
+        <div
+          class="swiper-slide max-[3000px]:max-h-[950px] max-[1440px]:max-h-[850px]"
+        >
           <img
             src="./assets/images/main.png"
             alt="main"
@@ -147,7 +149,9 @@
             class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
         </div>
-        <div class="swiper-slide max-h-[950px] max-[1440px]:max-h-[850px]">
+        <div
+          class="swiper-slide max-[3000px]:max-h-[950px] max-[1440px]:max-h-[850px]"
+        >
           <img
             src="./assets/images/main.png"
             alt="main"
@@ -159,7 +163,9 @@
             class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
         </div>
-        <div class="swiper-slide max-h-[950px] max-[1440px]:max-h-[850px]">
+        <div
+          class="swiper-slide max-[3000px]:max-h-[950px] max-[1440px]:max-h-[850px]"
+        >
           <img
             src="./assets/images/main.png"
             alt="main"
@@ -171,7 +177,9 @@
             class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
         </div>
-        <div class="swiper-slide max-h-[950px] max-[1440px]:max-h-[850px]">
+        <div
+          class="swiper-slide max-[3000px]:max-h-[950px] max-[1440px]:max-h-[850px]"
+        >
           <img
             src="./assets/images/main.png"
             alt="main"
@@ -183,7 +191,9 @@
             class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
         </div>
-        <div class="swiper-slide max-h-[950px] max-[1440px]:max-h-[850px]">
+        <div
+          class="swiper-slide max-[3000px]:max-h-[950px] max-[1440px]:max-h-[850px]"
+        >
           <img
             src="./assets/images/main.png"
             alt="main"
@@ -195,7 +205,9 @@
             class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
         </div>
-        <div class="swiper-slide max-h-[950px] max-[1440px]:max-h-[850px]">
+        <div
+          class="swiper-slide max-[3000px]:max-h-[950px] max-[1440px]:max-h-[850px]"
+        >
           <img
             src="./assets/images/main.png"
             alt="main"
