--- a/blog.html
+++ b/blog.html
@@ -134,8 +134,223 @@
       class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px] px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
     >
       <div class="flex gap-47">
-        <div>
-          <h3>Оглавление</h3>
+        <div class="max-[1440px]:hidden">
+          <h3 class="text-[#3A3A3A] mb-5 font-medium text-xl">Оглавление</h3>
+          <p class="text-[#3A3A3A] mb-3">
+            <span class="mr-1">---</span> Виды стрелковых спортов
+          </p>
+          <p class="text-[#3A3A3A] mb-3">
+            <span class="mr-1">---</span> Как выбрать подходящий вид стрелкового
+            спорта
+          </p>
+          <p class="text-[#3A3A3A] mb-3">
+            <span class="mr-1">---</span> Где можно практиковаться
+          </p>
+          <p class="text-[#3A3A3A] mb-3">
+            <span class="mr-1">---</span> Заключение
+          </p>
+        </div>
+        <div class="flex-1">
+          <h1
+            class="text-[#3A3A3A] text-[4rem] mb-8 font-medium leading-[100%] space3 max-[1440px]:text-5xl max-[768px]:text-2xl max-[768px]:mb-4"
+          >
+            Виды грузоперевозок в России по сегментам
+          </h1>
+          <p
+            class="text-[#3A3A3A] space3 text-2xl mb-15 max-[1440px]:mb-12 max-[768px]:mb-8"
+          >
+            24.06.2025
+          </p>
+          <img
+            src="./assets/images/blog.png"
+            alt="blog"
+            class="max-[1440px]:hidden mb-15"
+          />
+          <img
+            src="./assets/images/blogTablet.png"
+            alt="blog"
+            class="max-[1440px]:block hidden max-[1024px]:hidden mb-12"
+          />
+          <img
+            src="./assets/images/blogTablet2.png"
+            alt="blog"
+            class="hidden max-[1024px]:block max-[768px]:hidden mb-12"
+          />
+          <img
+            src="./assets/images/blogMobile.png"
+            alt="blog"
+            class="hidden max-[768px]:block mb-8"
+          />
+          <p
+            class="mb-15 text-[#3A3A3A] space3 text-2xl leading-8 max-[1440px]:mb-12 max-[768px]:mb-8"
+          >
+            Грузоперевозки — основа логистики и экономики России. Страна
+            большая, климат разный, расстояния огромные — и под каждую задачу
+            нужен свой подход. Кто-то везёт скоропорт, кто-то металл, кто-то —
+            онлайн-заказы. И для всех нужны разные типы транспорта и решений.
+          </p>
+          <h2
+            class="text-[#3A3A3A] mb-8 space3 leading-[100%] font-medium text-[3.5rem] max-[1440px]:text-5xl max-[768px]:text-[2rem]"
+          >
+            Виды автомобильных перевозок
+          </h2>
+          <p class="mb-8 text-[#3A3A3A] space3 text-2xl leading-8">
+            Грузоперевозки нужны, чтобы товары, оборудование, сырьё и материалы
+            попадали туда, где они нужны — от заводов до магазинов, от складов
+            до конечного покупателя. Без них невозможна работа ни одного
+            бизнеса: ничего не произойдёт, не построится и не продастся, если
+            это не будет доставлено вовремя. Грузоперевозки — это связующее
+            звено между производством и потреблением, и от их качества зависит
+            стабильность поставок, сроки и даже цена конечного продукта.
+          </p>
+          <div class="mb-15 max-[1440px]:mb-12 max-[768px]:mb-8">
+            <p class="space3 text-[#3A3A3A] leading-8 text-2xl mb-3">
+              <span class="mr-7">1.</span>Автомобильные
+            </p>
+            <p class="space3 text-[#3A3A3A] leading-8 text-2xl mb-3">
+              <span class="mr-5">2.</span>Железнодорожные
+            </p>
+            <p class="space3 text-[#3A3A3A] leading-8 text-2xl">
+              <span class="mr-5">3.</span>Авиаперевозки
+            </p>
+          </div>
+          <h2
+            class="text-[#3A3A3A] mb-8 space3 leading-[100%] font-medium text-[3.5rem] max-[1440px]:text-5xl max-[768px]:text-[2rem]"
+          >
+            Железнодорожные перевозки
+          </h2>
+          <div class="mb-15 max-[1440px]:mb-12 max-[768px]:mb-8">
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-3">
+              Когда это выгодно?
+            </p>
+            <p class="mb-8 text-[#3A3A3A] space3 text-[1.375rem] leading-7.5">
+              Железная дорога особенно эффективна на больших расстояниях — от
+              1000 км и выше. Она незаменима при доставке тяжёлых, объёмных и
+              навалочных грузов: угля, леса, металла, стройматериалов и
+              промышленных товаров.
+            </p>
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-3">
+              Возможности
+            </p>
+            <p class="mb-8 text-[#3A3A3A] space3 text-[1.375rem] leading-7.5">
+              Железнодорожные перевозки можно комбинировать с другими видами
+              транспорта: авто, морем, авиа. Это позволяет выстроить удобную
+              логистику "от двери до двери", особенно при международных
+              поставках и доставке в отдалённые регионы.
+            </p>
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-3">
+              Что обычно перевозят?
+            </p>
+            <p class="mb-8 text-[#3A3A3A] space3 text-[1.375rem] leading-7.5">
+              Железнодорожным транспортом в России чаще всего перевозят сырьё и
+              промышленные грузы: уголь, руду, лес, металл, зерно,
+              стройматериалы и удобрения. Также активно используются
+              контейнерные перевозки, особенно при доставке товаров из Китая и
+              других стран. Поездами перевозят технику, оборудование,
+              автомобили, а иногда и продукты, если сроки не критичны. Благодаря
+              высокой грузоподъёмности и стабильности, железная дорога остаётся
+              одним из ключевых каналов для доставки крупнотоннажных и массовых
+              грузов на большие расстояния.
+            </p>
+          </div>
+          <h2
+            class="text-[#3A3A3A] mb-8 space3 leading-[100%] font-medium text-[3.5rem] max-[1440px]:text-5xl"
+          >
+            Как выбрать подходящий вид стрелкового спорта
+          </h2>
+          <div class="p-8 bg-[#F2F2F2] rounded-[25px] mb-8 max-[768px]:p-5">
+            <p class="text-[#3A3A3A] text-[1.375rem] leading-7.5">
+              Автоперевозки — это про скорость, контроль и свободу в логистике.
+              Здесь важна каждая минута, и именно машина позволяет быть
+              максимально точным в сроках
+            </p>
+          </div>
+          <p
+            class="text-[#3A3A3A] text-[1.375rem] leading-7.5 mb-15 max-[1440px]:mb-12 max-[768px]:mb-8"
+          >
+            Автомобильные перевозки — самый гибкий и доступный способ доставки
+            грузов по России. Они подходят как для коротких, так и для
+            межрегиональных маршрутов, позволяют доставлять грузы напрямую "от
+            двери до двери" и оперативно менять маршрут при необходимости.
+            Особенно востребованы автоперевозки в торговле, строительстве и
+            e-commerce, где важны скорость и точность. Благодаря широкой сети
+            дорог и большому выбору транспорта — от газелей до фур — можно
+            перевозить всё: от небольших партий товаров до крупногабаритной
+            техники.
+          </p>
+          <img
+            src="./assets/images/blog.png"
+            alt="blog"
+            class="max-[1440px]:hidden mb-15"
+          />
+          <img
+            src="./assets/images/blogTablet.png"
+            alt="blog"
+            class="max-[1440px]:block hidden max-[1024px]:hidden mb-12"
+          />
+          <img
+            src="./assets/images/blogTablet2.png"
+            alt="blog"
+            class="hidden max-[1024px]:block max-[768px]:hidden mb-12"
+          />
+          <img
+            src="./assets/images/blogMobile.png"
+            alt="blog"
+            class="hidden max-[768px]:block mb-8"
+          />
+          <h2
+            class="text-[#3A3A3A] mb-8 space3 leading-[100%] font-medium text-[3.5rem] max-[1440px]:text-5xl"
+          >
+            Где и каким способом чаще всего перевозят грузы?
+          </h2>
+          <div class="mb-15 max-[1440px]:mb-12 max-[768px]:mb-8">
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-8">
+              Россия
+            </p>
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-3">
+              — Железнодорожные перевозки — ключевой способ для доставки тяжёлых
+              и массовых грузов на большие расстояния по стране.
+            </p>
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-3">
+              — Автомобильные перевозки — широко применяются для региональной и
+              городской логистики, доставки "от двери до двери".
+            </p>
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-8">
+              — Морские перевозки — важны для международной торговли и грузов в
+              прибрежных регионах.
+            </p>
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-8">
+              Китай
+            </p>
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-3">
+              — Железнодорожные перевозки — активно развиваются для
+              международной логистики, например, по "Новой шелковой дороге".
+            </p>
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-3">
+              — Морские перевозки — крупнейший мировой игрок в контейнерных
+              морских перевозках.
+            </p>
+            <p class="text-[#3A3A3A] space3 text-[1.375rem] leading-7.5 mb-8">
+              — Авиаперевозки — быстро растущий сегмент для электронной
+              коммерции.
+            </p>
+          </div>
+          <h2
+            class="text-[#3A3A3A] mb-8 space3 leading-[100%] font-medium text-[3.5rem] max-[1440px]:text-5xl"
+          >
+            Заключение
+          </h2>
+          <p class="text-[#3A3A3A] text-[1.375rem] leading-7.5">
+            В странах СНГ транспортировка грузов строится с учётом особенностей
+            географии и инфраструктуры каждой страны. Железнодорожные перевозки
+            остаются основой для крупных и дальних маршрутов, особенно в России
+            и Казахстане, тогда как автомобильный транспорт доминирует в
+            региональных и внутренних доставках. Морские перевозки играют важную
+            роль в прибрежных государствах с доступом к морю, а авиаперевозки
+            востребованы для срочных и ценных грузов по всему региону. Грамотный
+            выбор вида транспорта помогает оптимизировать логистику, снизить
+            расходы и обеспечить своевременную доставку товаров.
+          </p>
         </div>
       </div>
     </main>
