--- a/index.html
+++ b/index.html
@@ -134,12 +134,22 @@
     <div
       class="swiper mySwiper relative -mt-8 max-[1440px]:-mt-23 overflow-hidden -z-10 mx-auto"
     >
-      <div class="swiper-wrapper">
-        <div
-          class="swiper-slide max-[3000px]:max-h-[650px] max-[1440px]:max-h-[850px]"
-        >
+      <div class="swiper-wrapper rounded-b-[56px]">
+        <div class="swiper-slide rounded-b-[56px]">
           <img
-            src="./assets/images/main.png"
+            src="./assets/images/mainShort.png"
+            alt="main"
+            class="w-full max-[1440px]:hidden"
+          />
+          <img
+            src="./assets/images/mainTablet.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img
+            src="./assets/images/mainShort.png"
             alt="main"
             class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
           />
@@ -149,11 +159,9 @@
             class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
         </div>
-        <div
-          class="swiper-slide max-[3000px]:max-h-[650px] max-[1440px]:max-h-[850px]"
-        >
+        <div class="swiper-slide">
           <img
-            src="./assets/images/main.png"
+            src="./assets/images/mainShort.png"
             alt="main"
             class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
           />
@@ -163,11 +171,9 @@
             class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
         </div>
-        <div
-          class="swiper-slide max-[3000px]:max-h-[650px] max-[1440px]:max-h-[850px]"
-        >
+        <div class="swiper-slide">
           <img
-            src="./assets/images/main.png"
+            src="./assets/images/mainShort.png"
             alt="main"
             class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
           />
@@ -177,11 +183,9 @@
             class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
         </div>
-        <div
-          class="swiper-slide max-[3000px]:max-h-[650px] max-[1440px]:max-h-[850px]"
-        >
+        <div class="swiper-slide">
           <img
-            src="./assets/images/main.png"
+            src="./assets/images/mainShort.png"
             alt="main"
             class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
           />
@@ -191,25 +195,9 @@
             class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
         </div>
-        <div
-          class="swiper-slide max-[3000px]:max-h-[650px] max-[1440px]:max-h-[850px]"
-        >
+        <div class="swiper-slide">
           <img
-            src="./assets/images/main.png"
-            alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
-          />
-          <img
-            src="./assets/images/mainTablet.png"
-            alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
-          />
-        </div>
-        <div
-          class="swiper-slide max-[3000px]:max-h-[650px] max-[1440px]:max-h-[850px]"
-        >
-          <img
-            src="./assets/images/main.png"
+            src="./assets/images/mainShort.png"
             alt="main"
             class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
           />
@@ -1231,7 +1219,8 @@
           </a>
         </div>
         <div class="flex gap-6 max-[1440px]:overflow-auto">
-          <div
+          <a
+            href="/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news1.png" class="mb-4" />
@@ -1245,7 +1234,7 @@
               пункты. Теперь ваши грузы доберутся ещё быстрее.
             </p>
             <p class="#3A3A3A space3">28 июня 2025</p>
-          </div>
+          </a>
           <div
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
