--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     />
     <link href="./output.css" rel="stylesheet" />
     <link href="./style.css" rel="stylesheet" />
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
 
-    <title>Logistics</title>
+    <title>Грузовые линии</title>
   </head>
   <body>
     <header
@@ -238,7 +239,7 @@
       </div>
     </div>
     <main
-      class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
+      class="page-container max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
     >
       <section
         class="flex gap-10 mb-23 pl-15 max-[1440px]:pl-10 relative max-[1440px]:mb-20 max-[768px]:mb-16 max-[1024px]:pl-5 max-[1024px]:gap-2 max-[768px]:px-4 max-[768px]:flex-col"
@@ -324,7 +325,9 @@
           </div>
         </div>
 
-        <div class="flex-1 relative pt-40 max-[1440px]:pt-20 max-[768px]:pt-3">
+        <div
+          class="about-image-wrap flex-1 relative pt-40 max-[1440px]:pt-20 max-[768px]:pt-3"
+        >
           <p class="font-medium text-2xl mb-6 space3 max-[1440px]:hidden">
             Логистика для бизнеса
             <span class="text-[#C83A36] leading-8"
@@ -351,7 +354,7 @@
           <img
             src="./assets/images/about_company.png"
             alt="about"
-            class="object-cover w-236 h-181 max-[1920px]:w-210 max-[1920px]:h-160 max-[1440px]:h-110 max-[768ox]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-20 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5"
+            class="about-image object-cover w-236 h-181 max-[1920px]:w-210 max-[1920px]:h-160 max-[1440px]:h-110 max-[768ox]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-20 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5"
           />
         </div>
       </section>
@@ -1221,9 +1224,9 @@
         <div class="flex gap-6 max-[1440px]:overflow-auto">
           <a
             href="/blog.html"
-            class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
+            class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
-            <img src="./assets/images/news1.png" class="mb-4" />
+            <img src="./assets/images/news1.png" class="news-card-image mb-4" />
             <p
               class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2"
             >
@@ -1236,12 +1239,11 @@
             <p class="#3A3A3A space3">28 июня 2025</p>
           </a>
           <div
-            class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
+            class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
               src="./assets/images/news2.png"
-              class="mb-4"
-              class="mb-4 max-[1440px]:object-cover max-[1440px]:w-108 max-[1440px]:h-87.5"
+              class="news-card-image mb-4 max-[1440px]:object-cover max-[1440px]:w-108 max-[1440px]:h-87.5"
             />
             <p
               class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2"
@@ -1255,12 +1257,11 @@
             <p class="#3A3A3A space3">19 июня 2025</p>
           </div>
           <div
-            class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
+            class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
               src="./assets/images/news3.png"
-              class="mb-4"
-              class="mb-4 max-[1440px]:object-cover max-[1440px]:w-108 max-[1440px]:h-87.5"
+              class="news-card-image mb-4 max-[1440px]:object-cover max-[1440px]:w-108 max-[1440px]:h-87.5"
             />
             <p
               class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2"
@@ -1274,12 +1275,11 @@
             <p class="#3A3A3A space3">5 июня 2025</p>
           </div>
           <div
-            class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
+            class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
               src="./assets/images/news4.png"
-              class="mb-4"
-              class="mb-4 max-[1440px]:object-cover max-[1440px]:w-108 max-[1440px]:h-87.5"
+              class="news-card-image mb-4 max-[1440px]:object-cover max-[1440px]:w-108 max-[1440px]:h-87.5"
             />
             <p
               class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2"
