--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
             специализирующийся на логистических решениях с 2008 года, и берет на
             себя весь спектр ваших транспортныз задач
           </p>
-          <button
+          <a
+            href="/about.html"
             class="w-[18rem] mb-7 max-[768px]:mb-6 h-16 max-[768px]:w-full max-[1440px]:text-base! max-[768px]:text-base! max-[1440px]:h-13 max-[1440px]:w-59.5 rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
           >
             Подробнее о компании
@@ -350,7 +351,7 @@
               alt="chevron"
               class="-rotate-90"
             />
-          </button>
+          </a>
           <img
             src="./assets/images/about_company.png"
             alt="about"
@@ -364,8 +365,9 @@
         <h2 class="title mb-14 max-[1440px]:mb-10 max-[768px]:mb-8">Услуги</h2>
 
         <div class="flex flex-wrap gap-3">
-          <div
-            class="flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white h-125 max-[1440px]:h-80 max-[768px]:h-60 radius_left relative overflow-hidden flex justify-between"
+          <a
+            href="/road_transportation.html#europ"
+            class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white h-125 max-[1440px]:h-80 max-[768px]:h-60 radius_left relative overflow-hidden flex justify-between"
           >
             <p
               class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:hidden"
@@ -378,82 +380,106 @@
             >
               Перевозка еврофурами
             </p>
-            <img src="./assets/icons/arrowUp.svg" alt="arrow" class="w-8 h-8" />
+            <img
+              src="./assets/icons/arrowUp.svg"
+              alt="arrow"
+              class="w-8 h-8 service-card-arrow"
+            />
             <img
               src="./assets/images/service1.png"
               alt="service1"
-              class="absolute bottom-0 right-0 w-120 h-100 max-[768px]:w-47 max-[768px]:h-47 max-[1440px]:w-70 max-[1440px]:h-60 max-[1440px]:-right-15 max-[1024px]:-right-5 max-[1024px]:h-65"
+              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:w-47 max-[768px]:h-47 max-[1440px]:w-70 max-[1440px]:h-60 max-[1440px]:-right-15 max-[1024px]:-right-5 max-[1024px]:h-65"
             />
-          </div>
+          </a>
 
-          <div
-            class="flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 overflow-hidden radius_full radius_servie2 relative flex justify-between"
+          <a
+            href="/road_transportation.html#city"
+            class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 overflow-hidden radius_full radius_servie2 relative flex justify-between"
           >
             <p
               class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-lg max-[768px]:leading-6"
             >
               Городские / пригородные перевозки
             </p>
-            <img src="./assets/icons/arrowUp.svg" alt="arrow" class="w-8 h-8" />
+            <img
+              src="./assets/icons/arrowUp.svg"
+              alt="arrow"
+              class="w-8 h-8 service-card-arrow"
+            />
             <img
               src="./assets/images/service2.png"
               alt="service1"
-              class="absolute bottom-0 right-0 w-120 h-100 max-[768px]:w-47 max-[768px]:h-47 max-[768px]:right-0 max-[1440px]:w-70 max-[1440px]:h-60 max-[1024px]:right-8"
+              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:w-47 max-[768px]:h-47 max-[768px]:right-0 max-[1440px]:w-70 max-[1440px]:h-60 max-[1024px]:right-8"
             />
-          </div>
+          </a>
 
-          <div
-            class="flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white radius_right max-[768px]:h-60 radius_servie3 h-125 max-[1440px]:h-80 overflow-hidden relative flex justify-between"
+          <a
+            href="/cargo_transportation.html#rc"
+            class="service-card flex-1 basis-[calc(33.333%-0.5rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white radius_right max-[768px]:h-60 radius_servie3 h-125 max-[1440px]:h-80 overflow-hidden relative flex justify-between"
           >
             <p
               class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-lg max-[768px]:leading-6"
             >
               Доставка выделенным транспортом в РЦ
             </p>
-            <img src="./assets/icons/arrowUp.svg" alt="arrow" class="w-8 h-8" />
+            <img
+              src="./assets/icons/arrowUp.svg"
+              alt="arrow"
+              class="w-8 h-8 service-card-arrow"
+            />
             <img
               src="./assets/images/service3.png"
               alt="service1"
-              class="absolute bottom-0 right-0 w-120 h-100 max-[1440px]:w-70 max-[768px]:w-45 max-[768px]:h-45 max-[768px]:right-0 max-[1440px]:h-60 max-[1024px]:right-11 max-[1024px]:bottom-2 max-[1024px]:w-60 max-[1024px]:h-50"
+              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[1440px]:w-70 max-[768px]:w-45 max-[768px]:h-45 max-[768px]:right-0 max-[1440px]:h-60 max-[1024px]:right-11 max-[1024px]:bottom-2 max-[1024px]:w-60 max-[1024px]:h-50"
             />
-          </div>
+          </a>
 
-          <div
-            class="flex-1 basis-[calc(50%-0.375rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white radius_left max-[768px]:h-60 radius_servie2 overflow-hidden h-125 max-[1440px]:h-80 relative flex justify-between"
+          <a
+            href="/cargo_transportation.html#ltl"
+            class="service-card flex-1 basis-[calc(50%-0.375rem)] max-[1024px]:basis-[calc(50%-0.375rem)] min-w-[300px] p-8 bg-white radius_left max-[768px]:h-60 radius_servie2 overflow-hidden h-125 max-[1440px]:h-80 relative flex justify-between"
           >
             <p
               class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-lg max-[768px]:leading-6"
             >
               Доставка малотоннажным транспортом
             </p>
-            <img src="./assets/icons/arrowUp.svg" alt="arrow" class="w-8 h-8" />
+            <img
+              src="./assets/icons/arrowUp.svg"
+              alt="arrow"
+              class="w-8 h-8 service-card-arrow"
+            />
             <img
               src="./assets/images/service4.png"
               alt="service1"
-              class="absolute bottom-0 right-0 w-185 h-120 object-cover max-[768px]:w-[95%] max-[768px]:bottom-2 max-[768px]:h-40 max-[768px]:right-0 max-[1440px]:w-110 max-[1440px]:h-70 max-[1024px]:-right-10 max-[1024px]:h-50 max-[1024px]:bottom-5"
+              class="service-card-image absolute bottom-0 right-0 w-185 h-120 object-cover max-[768px]:w-[95%] max-[768px]:bottom-2 max-[768px]:h-40 max-[768px]:right-0 max-[1440px]:w-110 max-[1440px]:h-70 max-[1024px]:-right-10 max-[1024px]:h-50 max-[1024px]:bottom-5"
             />
-          </div>
+          </a>
 
-          <div
-            class="flex-1 basis-[calc(50%-0.375rem)] max-[1024px]:basis-full min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 radius_right radius_servie5 relative flex justify-between"
+          <a
+            href="/road_transportation.html#partial"
+            class="service-card flex-1 basis-[calc(50%-0.375rem)] max-[1024px]:basis-full min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 radius_right radius_servie5 relative flex justify-between"
           >
             <p
               class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-lg max-[768px]:leading-6"
             >
               Перевозка догрузом
             </p>
-            <img src="./assets/icons/arrowUp.svg" alt="arrow" class="w-8 h-8" />
             <img
-              src="./assets/images/service5.png"
-              alt="service1"
-              class="absolute bottom-0 right-0 w-195 h-130 object-cover max-[1440px]:w-90 max-[1440px]:h-70 max-[1024px]:hidden"
+              src="./assets/icons/arrowUp.svg"
+              alt="arrow"
+              class="w-8 h-8 service-card-arrow"
             />
             <img
               src="./assets/images/service5.png"
               alt="service1"
-              class="absolute bottom-0 min-[768px]:left-11 w-135 h-70 object-cover hidden max-[1024px]:block max-[768px]:w-75 max-[768px]:h-50 max-[768px]:right-0!"
+              class="service-card-image absolute bottom-0 right-0 w-195 h-130 object-cover max-[1440px]:w-90 max-[1440px]:h-70 max-[1024px]:hidden"
             />
-          </div>
+            <img
+              src="./assets/images/service5.png"
+              alt="service1"
+              class="service-card-image absolute bottom-0 min-[768px]:left-11 w-135 h-70 object-cover hidden max-[1024px]:block max-[768px]:w-75 max-[768px]:h-50 max-[768px]:right-0!"
+            />
+          </a>
         </div>
       </section>
       <section
@@ -769,7 +795,8 @@
       >
         <div class="flex items-center justify-between mb-14 max-[768px]:mb-6">
           <h2 class="title">Отзывы</h2>
-          <button
+          <a
+            href="/reviews.html"
             class="w-44.5 max-[768px]:hidden h-16 max-[1440px]:h-13 max-[1440px]:w-37 max-[1440px]:text-base! rounded-xl flex items-center justify-center gap-2.5 bg-[#C83A36] text-xl text-white"
           >
             Все отзывы
@@ -778,7 +805,7 @@
               alt="chevron"
               class="-rotate-90"
             />
-          </button>
+          </a>
         </div>
         <div
           class="grid grid-cols-3 gap-3 max-[1440px]:grid-cols-2 max-[768px]:flex max-[768px]:overflow-auto"
