news click and up arrow in footer

--- a/index.html
+++ b/index.html
@@ -1268,6 +1268,10 @@
           <div
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
+          <a
+            href="/blog.html"
+            class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
+          >
             <img
               src="./assets/images/news2.png"
               class="news-card-image mb-4 max-[1440px]:object-cover max-[1440px]:w-108 max-[1440px]:h-87.5"
@@ -1282,8 +1286,13 @@
               доставки по городу до 3 часов.
             </p>
             <p class="#3A3A3A space3">19 июня 2025</p>
+          </a>
           </div>
           <div
+            class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
+          >
+          <a
+            href="/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
@@ -1300,8 +1309,13 @@
               при перевозке.
             </p>
             <p class="#3A3A3A space3">5 июня 2025</p>
+          </a>
           </div>
           <div
+            class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
+          >
+          <a
+            href="/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
@@ -1318,6 +1332,7 @@
               акциях, изменениях и новостях компании.
             </p>
             <p class="#3A3A3A space3">1 июля 2025</p>
+          </a>
           </div>
         </div>
         <button
@@ -1347,7 +1362,12 @@
             <img src="./assets/icons/telegram.svg" alt="text" />
           </div>
           <div class="footer_icon_wrap bg-[#C83A36]!">
+            <a
+            href="/#header"
+            onclick="event.preventDefault(); window.scrollTo({top: 0, behavior: 'smooth'}); return false;"
+            >
             <img src="./assets/icons/arrowUpWhite.svg" alt="arrow" />
+            </a>
           </div>
         </div>
       </div>
